updated html maybe

--- a/noshow.ipynb
+++ b/noshow.ipynb
@@ -6,6 +6,8 @@
    "source": [
     "# Analysis of Why Patients Miss Their Scheduled Medical Appointments\n",
     "\n",
+    "![title](https://github.com/rezaameli/rezaameli.github.io/blob/master/noshow.jpg)\n",
+    "\n",
     "## Reza Ameli, Kevin Do, Richard Do\n",
     "\n",
     "### CMSC320 Final Tutorial Fall 2019\n",
