fixed some spelling

--- a/noshow.ipynb
+++ b/noshow.ipynb
@@ -1089,7 +1089,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here we can see some discrepency between the two genders interaction with the residual, so lets run a linear regression to see if we need an interaction term between Age and Gender."
+    "Here we can see some discrepancy between the two genders interaction with the residual, so let's run a linear regression to see if we need an interaction term between Age and Gender."
    ]
   },
   {
