--- a/noshow.ipynb
+++ b/noshow.ipynb
@@ -675,7 +675,9 @@
   {
    "cell_type": "code",
    "execution_count": 117,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -711,7 +713,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This is where it gets a bit interesting because now there's more data for males now when it relates to alcoholism (who would've knew). Anywho, the median age for people who do and do not show up to their appointments drop to a lower age range like 50 for males and 45 for females. However, I do not seen much a change in the two plots since the dataset lacks much variation when it comes to alcoholism. "
+    "This is where it gets a bit interesting because now there's more data for males now when it relates to alcoholism (who would've knew). Anywho, the median age for people who do and do not show up to their appointments drop to a lower age range like 50 for males and 45 for females. There is a slight spike increase in people showing up to medical appointments if they are alcoholics especially for males."
    ]
   },
   {
